docs: updated env file template

--- a/.env-template
+++ b/.env-template
@@ -1,9 +1,12 @@
 TOKEN=''
 
 GUILD_ID=''
-APP_ID=''
+MEMBER_ROLE_ID=''
 
 COMMANDS_CHANNEL=''
 GENERAL_CHANNEL=''
 EVENTOS_CHANNEL=''
 REGISTER_CHANNEL=''
+
+ALBION_GUILD_ID=''
+ALBION_API='https://gameinfo.albiononline.com/api/gameinfo/guilds/'
